# choice_exchange

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_release.sh
.github/workflows/: release-artifacts.yml  tests.yml
contracts/choice_factory/: Cargo.toml  README.md
contracts/choice_factory/schema/: config_response.json  pair_info.json
contracts/choice_factory/src/: contract.rs  state.rs  testing.rs
contracts/choice_farm/: .gitignore  Cargo.toml
contracts/choice_farm/examples/: farm_schema.rs
contracts/choice_farm/src/: contract.rs  lib.rs  mock_querier.rs  querier.rs  state.rs  testing.rs
contracts/choice_pair/: Cargo.toml  README.md
contracts/choice_pair/examples/: pair_schema.rs
contracts/choice_pair/src/: contract.rs  state.rs  testing.rs
contracts/choice_router/: Cargo.toml  README.md
contracts/choice_router/schema/: config_response.json  instantiate_msg.json
contracts/choice_router/src/: contract.rs  operations.rs  state.rs
contracts/choice_router/src/testing/: tests.rs
contracts/choice_send_to_auction/: Cargo.toml  README.md
contracts/choice_send_to_auction/src/: contract.rs  querier.rs
contracts/choice_token/: Cargo.toml  README.md
contracts/choice_token/src/: contract.rs
contracts/terraswap_factory/: Cargo.toml
contracts/terraswap_factory/examples/: schema.rs
contracts/terraswap_factory/schema/: config_response.json  execute_msg.json  instantiate_msg.json  pair_info.json  pairs_response.json
contracts/terraswap_factory/src/: contract.rs  state.rs  testing.rs
contracts/terraswap_pair/: Cargo.toml
contracts/terraswap_pair/src/: contract.rs  testing.rs
contracts/terraswap_router/: Cargo.toml
contracts/terraswap_router/examples/: schema.rs
contracts/terraswap_router/src/: contract.rs  operations.rs
contracts/terraswap_router/src/testing/: tests.rs
contracts/terraswap_token/: Cargo.toml
