[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.choice]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
panic = 'abort'

[profile.release.package."choice-pair"]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true

[profile.release.package."choice-factory"]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true

[profile.release.package."choice-router"]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true