[package]
name = "choice-factory"
version = "0.2.0"
authors = ["Terraform Labs, PTE.", "DELIGHT LABS"]
edition = "2018"
description = "A Choice factory contract - auto pair contract generator and also directory for all pairs"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]



[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
library = []

[dependencies]
choice = { path = "../../packages/choice", default-features = false, version = "2.9.0"}

cw2                  = { version = "2.0.0" }
cw20                 = { version = "2.0.0" } 
cw20-base            = { version = "2.0.0" }
cosmwasm-schema      = { version = "1.5.0" }
cosmwasm-std         = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cosmwasm-storage     = { version = "1.5.2", features = [ "iterator" ] }
cw-storage-plus      = { version = "2.0.0" }

schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
protobuf = { version = "2", features = ["with-bytes"] }

hex                  = { version = "0.4.3" }


[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
