[package]
name = "choice-pair"
version = "0.2.0"
authors = ["Terraform Labs, PTE.", "DELIGHT LABS"]
edition = "2018"
description = "A Choice pair contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test 
library = []

[dependencies]
cw2                  = { version = "2.0.0" }
cw20                 = { version = "2.0.0" } 
cw20-base            = { version = "2.0.0" }
cosmwasm-schema      = { version = "1.5.0" }
cosmwasm-std         = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cosmwasm-storage     = { version = "1.5.2", features = [ "iterator" ] }
cw-storage-plus      = { version = "2.0.0" }

injective-cosmwasm   = { version = "0.3.1" }
injective-math       = { version = "0.3.0" }
injective-std        = { version = "1.13.2" }
injective-std-derive = { version = "1.13.0" }

schemars             = { version = "0.8.16" }
serde                = { version = "1.0.196", default-features = false, features = [ "derive" ] }
serde-cw-value       = { version = "0.7.0" }
serde-json-wasm      = { version = "1.0.0" }
serde_json           = { version = "1.0.111" }
serde_repr           = { version = "0.1.17" }
serde_test           = { version = "1.0.176" }

thiserror            = { version = "1.0.56" }
protobuf             = { version = "2", features = ["with-bytes"] }

choice = { path = "../../packages/choice", default-features = false, version = "2.9.0"}

[dev-dependencies]
