[package]
name = "choice-router"
version = "1.1.0"
authors = [""]
edition = "2018"
description = "A Choice router contract - provides multi-step operations to facilitate single sign operation"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]



[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
library = []

[dependencies]
cw2                  = { version = "2.0.0" }
cw20                 = { version = "2.0.0" } 
cosmwasm-std         = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cw-storage-plus      = { version = "2.0.0" }
cosmwasm-schema      = { version = "2.2.1" }
injective-cosmwasm   = { version = "0.3.1" }
injective-math       = { version = "0.3.0" }

schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

choice = { path = "../../packages/choice", default-features = false, version = "1.1.0"}
