[package]
name = "choice-send-to-auction"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
cw20                 = { version = "2.0.0" } 
cosmwasm-schema      = { version = "1.5.0" }
cosmwasm-std         = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cw-storage-plus      = { version = "2.0.0" }

injective-cosmwasm   = { version = "0.3.1" }
injective-math       = { version = "0.3.0" }

schemars             = { version = "0.8.16" }
serde                = { version = "1.0.196", default-features = false, features = [ "derive" ] }
serde-json-wasm      = { version = "1.0.0" }
serde_json           = { version = "1.0.111" }
serde_repr           = { version = "0.1.17" }

thiserror            = { version = "1.0.56" }

hex                  = { version = "0.4.3" }


