[package]
name = "choice-token"
version = "1.1.0"
authors = [""]
edition = "2018"
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license = "MIT"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2                  = { version = "2.0.0" }
cw20                 = { version = "2.0.0" } 
cw20-base            = { version = "2.0.0" }
cosmwasm-schema      = { version = "1.5.0" }
cosmwasm-std         = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ] }
cw-storage-plus      = { version = "2.0.0" }

schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
choice = { path = "../../packages/choice", default-features = false, version = "1.1.0"}
