[package]
name = "terraswap-pair"
version = "0.2.0"
authors = ["Terraform Labs, PTE.", "DELIGHT LABS"]
edition = "2018"
description = "A Terraswap pair contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib

[dependencies]
cw2 = { version = "2.0.0" } 
cw20 = { version = "2.0.0" } 
cosmwasm-std = { version = "2.1.0", features = [ "abort", "cosmwasm_1_2", "cosmwasm_1_3", "cosmwasm_1_4", "cosmwasm_2_0", "iterator", "stargate" ]  }
cw-storage-plus = { version = "2.0.0" } 
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
terraswap = { path = "../../packages/terraswap", default-features = false, version = "2.9.0"}

injective-cosmwasm = "0.3.1"
injective-std = "1.13.2"
hex = "0.4.3"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
